cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09493_316646959.yaml
Resources:
  ec2vpcE7354DA9:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: Ec2VpcStack/ec2vpc
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/Resource
  ec2vpcPublicSubnet1Subnet85F5720A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: ec2vpcE7354DA9
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: Ec2VpcStack/ec2vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PublicSubnet1/Subnet
  ec2vpcPublicSubnet1RouteTable26BAE44D:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: ec2vpcE7354DA9
      Tags:
        - Key: Name
          Value: Ec2VpcStack/ec2vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PublicSubnet1/RouteTable
  ec2vpcPublicSubnet1RouteTableAssociation33D2F9FF:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ec2vpcPublicSubnet1RouteTable26BAE44D
      SubnetId:
        Ref: ec2vpcPublicSubnet1Subnet85F5720A
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PublicSubnet1/RouteTableAssociation
  ec2vpcPublicSubnet1DefaultRoute3789F723:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ec2vpcPublicSubnet1RouteTable26BAE44D
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: ec2vpcIGW8BD459C1
    DependsOn:
      - ec2vpcVPCGW82C2D141
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PublicSubnet1/DefaultRoute
  ec2vpcPublicSubnet1EIP54B7FE4F:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: Ec2VpcStack/ec2vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PublicSubnet1/EIP
  ec2vpcPublicSubnet1NATGatewayD5ED78C6:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - ec2vpcPublicSubnet1EIP54B7FE4F
          - AllocationId
      SubnetId:
        Ref: ec2vpcPublicSubnet1Subnet85F5720A
      Tags:
        - Key: Name
          Value: Ec2VpcStack/ec2vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PublicSubnet1/NATGateway
  ec2vpcPublicSubnet2SubnetE8434D2A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: ec2vpcE7354DA9
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: Ec2VpcStack/ec2vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PublicSubnet2/Subnet
  ec2vpcPublicSubnet2RouteTable30FEE750:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: ec2vpcE7354DA9
      Tags:
        - Key: Name
          Value: Ec2VpcStack/ec2vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PublicSubnet2/RouteTable
  ec2vpcPublicSubnet2RouteTableAssociation7F2AAF18:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ec2vpcPublicSubnet2RouteTable30FEE750
      SubnetId:
        Ref: ec2vpcPublicSubnet2SubnetE8434D2A
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PublicSubnet2/RouteTableAssociation
  ec2vpcPublicSubnet2DefaultRouteD65A436B:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ec2vpcPublicSubnet2RouteTable30FEE750
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: ec2vpcIGW8BD459C1
    DependsOn:
      - ec2vpcVPCGW82C2D141
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PublicSubnet2/DefaultRoute
  ec2vpcPrivateSubnet1Subnet404A48E5:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: ec2vpcE7354DA9
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: Ec2VpcStack/ec2vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PrivateSubnet1/Subnet
  ec2vpcPrivateSubnet1RouteTableE4C3164A:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: ec2vpcE7354DA9
      Tags:
        - Key: Name
          Value: Ec2VpcStack/ec2vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PrivateSubnet1/RouteTable
  ec2vpcPrivateSubnet1RouteTableAssociation0335FAE2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ec2vpcPrivateSubnet1RouteTableE4C3164A
      SubnetId:
        Ref: ec2vpcPrivateSubnet1Subnet404A48E5
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PrivateSubnet1/RouteTableAssociation
  ec2vpcPrivateSubnet1DefaultRoute41D37CD4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ec2vpcPrivateSubnet1RouteTableE4C3164A
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: ec2vpcPublicSubnet1NATGatewayD5ED78C6
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PrivateSubnet1/DefaultRoute
  ec2vpcPrivateSubnet2Subnet99E32630:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: ec2vpcE7354DA9
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: Ec2VpcStack/ec2vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PrivateSubnet2/Subnet
  ec2vpcPrivateSubnet2RouteTable15AFCE90:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: ec2vpcE7354DA9
      Tags:
        - Key: Name
          Value: Ec2VpcStack/ec2vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PrivateSubnet2/RouteTable
  ec2vpcPrivateSubnet2RouteTableAssociation64F8C1E9:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ec2vpcPrivateSubnet2RouteTable15AFCE90
      SubnetId:
        Ref: ec2vpcPrivateSubnet2Subnet99E32630
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PrivateSubnet2/RouteTableAssociation
  ec2vpcPrivateSubnet2DefaultRoute8BDC6613:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ec2vpcPrivateSubnet2RouteTable15AFCE90
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: ec2vpcPublicSubnet1NATGatewayD5ED78C6
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/PrivateSubnet2/DefaultRoute
  ec2vpcIGW8BD459C1:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Ec2VpcStack/ec2vpc
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/IGW
  ec2vpcVPCGW82C2D141:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: ec2vpcE7354DA9
      InternetGatewayId:
        Ref: ec2vpcIGW8BD459C1
    Metadata:
      aws:cdk:path: Ec2VpcStack/ec2vpc/VPCGW
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.75.0,@aws-cdk/aws-cloudwatch=1.75.0,@aws-cdk/aws-ec2=1.75.0,@aws-cdk/aws-events=1.75.0,@aws-cdk/aws-iam=1.75.0,@aws-cdk/aws-kms=1.75.0,@aws-cdk/aws-logs=1.75.0,@aws-cdk/aws-s3=1.75.0,@aws-cdk/aws-s3-assets=1.75.0,@aws-cdk/aws-ssm=1.75.0,@aws-cdk/cloud-assembly-schema=1.75.0,@aws-cdk/core=1.75.0,@aws-cdk/cx-api=1.75.0,@aws-cdk/region-info=1.75.0,jsii-runtime=node.js/v18.12.1
    Metadata:
      aws:cdk:path: Ec2VpcStack/CDKMetadata/Default
Outputs:
  vpcidoutput:
    Description: VPC ID
    Value:
      Ref: ec2vpcE7354DA9
  publicsubnets:
    Description: Public Subnets
    Value:
      Fn::Join:
        - ""
        - - Ref: ec2vpcPublicSubnet1Subnet85F5720A
          - ","
          - Ref: ec2vpcPublicSubnet2SubnetE8434D2A
  privatesubnets:
    Description: Private Subnets
    Value:
      Fn::Join:
        - ""
        - - Ref: ec2vpcPrivateSubnet1Subnet404A48E5
          - ","
          - Ref: ec2vpcPrivateSubnet2Subnet99E32630
